Bug 158321 - No error message when file doesn't exist
Summary: No error message when file doesn't exist
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-11-22 15:04 UTC by Xisco Faulí
Modified: 2023-11-23 11:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
error message (29.07 KB, image/png)
2023-11-22 15:04 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-11-22 15:04:08 UTC
Created attachment 190970 [details]
error message

Steps to reproduce:
1. Launch LibreOffice from command line with instdir/program/soffice <path to a non-existing file>

-> Nothing happens. An error message should be prompted.

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4b81692f8f3236082f9ac989e4e21c8119ff6e64
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-11-22 15:04:52 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-10-02 10:25:46 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-10-02 13:07:00 +0200
commit e3c961e6a3917d95534652e0f982918cc1079015 (patch)
tree 1efa9761d9d2159f06800f1f15b625a7dcc15d47
parent fa229eb1ecbcbb7b861679158ad706e37d454526 (diff)
reduce allocations in InterceptedInteraction

Bisected with: bibisect-linux64-24.2

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2023-11-23 11:07:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/59280a9ce5a15136a6fdd383aedf02c6cf7d6e96

tdf#158321 No error message when file doesn't exist

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.