tdf#158321 No error message when file doesn't exist

Revert "reduce allocations in InterceptedInteraction"

This reverts commit e3c961e6a3917d95534652e0f982918cc1079015.

Change-Id: I26ba0acaa088dff1800ccd69513056f821bd4d7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159762
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>