ucbhelper/source/client/interceptedinteraction.cxx
@@ -23,14 +23,18 @@
 
 namespace ucbhelper{
 
-InterceptedInteraction::InterceptedInteraction(std::span< const InterceptedRequest > lInterceptions)
-    : m_lInterceptions(lInterceptions)
+InterceptedInteraction::InterceptedInteraction()
 {
 }
 
 void InterceptedInteraction::setInterceptedHandler(const css::uno::Reference< css::task::XInteractionHandler >& xInterceptedHandler)
 {
     m_xInterceptedHandler = xInterceptedHandler;
+}
+
+void InterceptedInteraction::setInterceptions(::std::vector< InterceptedRequest >&& lInterceptions)
+{
+    m_lInterceptions = std::move(lInterceptions);
 }
 
 InterceptedInteraction::EInterceptionState InterceptedInteraction::intercepted(
